<resources>
    <string name="app_name">МойРЖЯ</string>
    <string name="main_call_to_action">Press to connect with interpreter</string>
    <string name="main_minutes_left">Minutes left:</string>
    <string name="current_call">Current call</string>
    <string name="left_for_today">Left for today</string>
    <string name="cancel">Cancel</string>
    <string name="video_call_waiting_title">Waiting for the answer…</string>
    <string name="video_call_waiting_text">Please, hold the line while we are connecting you with the interpreter. It could take up till 5 minutes</string>
    <string name="permission_rationale_call">Audio and video record permission is required for the call to interpreter.</string>
    <string name="error_call_failed">Failed to call</string>
    <string name="err_call_try_later">Something happened while trying to call. Please try again later</string>
    <string name="ok">OK</string>
    <string name="no_minutes_left">You have exhausted daily minutes.\nNew minutes will be available tomorrow</string>
    <string name="main_wait_minutes_loading">Please wait…\nChecking your remaining minutes</string>
    <string name="internet_failure">Server connection error. Check your internet connection</string>
    <string name="name_hint">Your name</string>
    <string name="proceed">Proceed</string>
    <string name="user_name_dialog_title">What is your name?</string>
    <string name="work_time_info">Service is available 24/7</string>
    <string name="timezone_ukraine">Kiev time</string>
    <string name="timezone">Moscow time</string>
    <string name="reason_alert_title">Choose call reason</string>
    <string name="call_reason_emergency">Call the emergency</string>
    <string name="call_reason_police">Call the police</string>
    <string name="call_reason_doctor">Doctor\'s appointment</string>
    <string name="call_reason_estore">Help with an online store</string>
    <string name="call_reason_call">Phone call</string>
    <string name="call_reason_bank">Conversation in a bank</string>
    <string name="call_reason_work">Conversation at work</string>
    <string name="call_reason_test">Test call</string>
    <string name="call_reason_talk">Small talk</string>
    <string name="call_reason_other">Other</string>
    <string name="error_global">Error</string>
    <string name="prompt_phone">Phone</string>
    <string name="prompt_password">Confirmation code</string>
    <string name="action_request_code">Request code</string>
    <string name="action_login">Continue</string>
    <string name="login_code_helper">You will receive sms with confirmation code</string>
    <string name="login_code_delay">Next request will be available in %d sec</string>
    <string name="menu_logout">Logout</string>
    <string name="error_server_base">Sorry, error occurred. Please try later</string>
    <string name="error_validation">Please enter correct data</string>
    <string name="error_login">Login failed</string>
    <string name="error_outside_working_time">Unfortunately you are calling outside office hours</string>
    <string name="error_in_call">You\'ve already calling from other device</string>
    <string name="error_no_right">You have no right to complete this operation</string>
    <string name="login_accept"><![CDATA[I have read and agree to the <b>terms of use</b> and <b>privacy policy</b>]]></string>
    <string name="login_tos">terms of use</string>
    <string name="login_privacy_policy">privacy policy</string>
    <string name="date_format">MM/dd/yy</string>
    <string name="main_active_till">Unlimited calls till</string>
    <string name="buy_unlim_btn">Buy unlim</string>
    <string name="not_available_desc_utog">You can make free call tomorrow. Or you can buy more minutes by clicking button below</string>
    <string name="not_available_desc">You can buy more minutes by clicking button below</string>
    <string name="tariff_pattern">%s - %s</string>
    <string name="permission_rationale_liqpay">You have to grant access to calls to complete payment process</string>
    <string name="call_chat_hint">Type your message</string>
    <string name="message_enter_label">Send</string>
    <string name="invalid_phone_format">Invalid phone format</string>
    <string name="fields_required">All fields are required</string>
    <string name="login_title">Sign in/Sign up</string>
    <string name="action_continue">Continue</string>
    <string name="should_accept_privacy_policy">You should agree to the privacy policy and terms of use</string>
    <string name="new_app_version">Version %s is available</string>
    <string name="update_required">Please update the app to continue</string>
    <string name="update_recommended">We recommend to update app for more comfortable use</string>
    <string name="confirmation_desc">SMS with confirmation code was sent to %s</string>
    <string name="wrong_number">Wrong number?</string>
    <string name="whats_new">What\'s new</string>
    <string name="confirmation_wait">If you have not received it yet, please wait.\nIt might take up to few minutes. Thank you!</string>
    <string name="confirmation_title">Have you received a verification code?</string>
    <string name="drawer_unlim">Buy unlim</string>
    <string name="drawer_utog">I\'m member of UTOG</string>
    <string name="drawer_exit">Exit</string>
    <string name="drawer_support">Does not work?</string>
    <string name="utog_alert_title">Are you a member of UTOG?</string>
    <string name="utog_alert_text">UTOG provides its members with favorable conditions for the use of the service by SL interpreters. You need to specify your data to confirm membership in UTOG</string>
    <string name="utog_never">Don\'t ask anymore</string>
    <string name="utog_later">Ask later</string>
    <string name="utog_ok">Provide data</string>
    <string name="utog_title">Are you a member of Ukrainian association of the deaf (UTOG)?</string>
    <string name="utog_last_name">Last name</string>
    <string name="utog_first_name">First name</string>
    <string name="utog_patronymic">Patronymic</string>
    <string name="utog_member_id">Number of member card</string>
    <string name="utog_cancel">Cancel</string>
    <string name="utog_continue">Continue</string>
    <string name="utog_success">Success</string>
    <string name="no_emial_client">There are no email clients on device</string>
    <string name="facebook_app_id" translatable="false">1134966689967629</string>
    <string-array name="call_reasons">
        <item>@string/call_reason_emergency</item>
        <item>@string/call_reason_police</item>
        <item>@string/call_reason_doctor</item>
        <item>@string/call_reason_estore</item>
        <item>@string/call_reason_call</item>
        <item>@string/call_reason_bank</item>
        <item>@string/call_reason_work</item>
        <item>@string/call_reason_test</item>
        <item>@string/call_reason_talk</item>
        <item>@string/call_reason_other</item>
    </string-array>
    <string name="drawer_facebook" translatable="false">Facebook</string>
    <string name="drawer_instagram" translatable="false">Instagram</string>
    <string name="drawer_telegram" translatable="false">Telegram</string>
    <string name="navigation_drawer_open" translatable="false">Open</string>
    <string name="navigation_drawer_close" translatable="false">Close</string>
    <string name="search_title">Search</string>
    <string name="ukraine">Ukraine</string>
    <string name="confirm_phone">Check phone number</string>
    <string name="change_number">Change number</string>
    <string name="review_title">Please assess the interpreter</string>
    <string name="review_hint">Why was it good or bad?</string>
    <string name="menu_help">Help</string>
    <string name="drawer_subscribe_title">Follow us:</string>
    <string name="help_requested_title">Your application is accepted</string>
    <string name="help_requested_text">Please wait. A specialist will contact you shortly</string>
    <string name="need_help">Didn\'t receive code?</string>
    <string name="drawer_share">Tell a friend</string>
    <string name="action_share">Tell\na friend</string>
    <string name="share_text" translatable="false">Install \'Мой РЖЯ\'. There is 24/7 access to interpreters. I already use it. https://play.google.com/store/apps/details?id=com.interpreter_android.ru</string>
    <string name="drawer_requests">Text-Video Interpretation</string>
    <string name="action_requests">Text-Video\nInterpretation</string>
    <string name="request_send_photo">Send file</string>
    <string name="media_image_gallery">Peek a photo</string>
    <string name="media_image_camera">Take a photo</string>
    <string name="media_selector_title">Select image</string>
    <string name="file_uploading">File uploading. Please wait</string>
    <string name="no_requests_desc">You can ask our interpreters to describe any document with SL. Capture it with cam or select from device</string>
    <string name="no_requests_title">You haven\'t any requests yet</string>
    <string name="status_new">New</string>
    <string name="status_assigned">In process</string>
    <string name="status_closed">Ready</string>
    <string name="drawer_scan_qr">Scan QR code</string>
    <string name="btn_reconnect">Reconnect</string>
    <string name="btn_close">Close</string>
    <string name="waiting_for_interpreter">Waiting for interpreter…</string>
    <string name="ask_a_question">Ask a question</string>
    <string name="asking_a_question">Cancel</string>
    <string name="group_session_leave">Leave</string>
    <string name="group_waiting_title">Waiting for connection</string>
    <string name="group_waiting_text">Please wait. It can take a few seconds</string>
    <string name="disconnected">Disconnected</string>
    <string name="connected">Connected</string>
    <string name="drawer_vpn">VPN</string>
    <string name="drawer_proxy">VPN</string>
    <string name="send_error">Send error</string>
    <string name="make_call">Make call</string>
    <string name="drawer_news">News</string>
    <string name="drawer_profile">My info</string>
    <string name="connecting_btn">Connecting…</string>
    <string name="buy_btn">Buy</string>
    <string name="till_text">till %s</string>
    <string name="empty_news">There is no news yet\nAll important information for you will appear here</string>
    <string name="minutes_check_title">Please wait</string>
    <string name="minutes_check_desc">Your account data is synchronizing</string>
    <string name="not_available_title">You have no minutes left</string>
    <string name="utog_free_call_title">You have a free call</string>
    <string name="personal_name">Name</string>
    <string name="personal_info">Personal Info</string>
    <string name="personal_phone">Phone number</string>
    <string name="personal_utog">UTOG</string>
    <string name="profile_other">Other</string>
    <string name="personal_buy">Buy more minutes</string>
    <string name="enter_confirmation_code">Enter confirmation code</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="compensation_step_fullname">Enter your full name so that we know who to apply for compensation</string>
    <string name="enter_passport_serial_code">Enter your passport serial code</string>
    <string name="enter_passport_serial_number">Enter your passport number</string>
    <string name="compensation_step_passport_data">Provide your passport details so we can identify you</string>
    <string name="enter_city">Enter city</string>
    <string name="enter_street">Enter street</string>
    <string name="enter_building_number">Building number</string>
    <string name="enter_apartment_number">Apartment number</string>
    <string name="enter_post_id">Post ID</string>
    <string name="compensation_step_registration_address">Enter your registration address</string>
</resources>