<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="pref_key_storage_personal"
        android:title="@string/personal_info">
        <Preference
            android:key="user_phone"
            android:title="@string/personal_phone" />
        <EditTextPreference
            android:key="user_name"
            android:title="@string/personal_name" />
        <Preference
            android:key="user_utog"
            android:title="@string/personal_utog" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/profile_other">
        <Preference
            android:key="user_buy"
            android:title="@string/personal_buy" />
        <Preference
            android:key="user_exit"
            android:title="@string/drawer_exit" />
    </PreferenceCategory>
</PreferenceScreen>