<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00222222"
    android:paddingStart="@dimen/default_side_margins"
    android:paddingEnd="@dimen/default_side_margins"
    tools:background="#80D66D6D">

    <EditText
        android:id="@+id/et_city"
        style="@style/EditText_rounded"
        android:layout_width="0dp"
        android:hint="@string/enter_city"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/et_street"
        style="@style/EditText_rounded"
        android:layout_width="0dp"
        android:layout_marginTop="16dp"
        android:hint="@string/enter_street"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_city" />

    <EditText
        android:id="@+id/et_building_number"
        style="@style/EditText_rounded"
        android:layout_width="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:hint="@string/enter_building_number"
        android:inputType="number"
        app:layout_constraintEnd_toStartOf="@+id/et_apartment_number"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_street" />

    <EditText
        android:id="@+id/et_apartment_number"
        style="@style/EditText_rounded"
        android:layout_width="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:hint="@string/enter_apartment_number"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/et_building_number"
        app:layout_constraintTop_toBottomOf="@+id/et_street" />

    <EditText
        android:id="@+id/et_post_id"
        style="@style/EditText_rounded"
        android:layout_width="0dp"
        android:layout_marginTop="16dp"
        android:hint="@string/enter_post_id"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_apartment_number" />

    <TextView
        android:id="@+id/tv_compensation_registration_address"
        style="@style/CompensationStepDescription_Text"
        android:layout_marginTop="32dp"
        android:text="@string/compensation_step_registration_address"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_post_id" />

</android.support.constraint.ConstraintLayout>