<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00222222"
    tools:background="#80D66D6D">

    <EditText
        android:id="@+id/et_last_name"
        style="@style/EditText_rounded"
        android:layout_width="0dp"
        android:layout_marginTop="16dp"
        android:hint="@string/utog_last_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <EditText
        android:id="@+id/et_name"
        style="@style/EditText_rounded"
        android:layout_width="0dp"
        android:layout_marginTop="16dp"
        android:hint="@string/utog_first_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_last_name" />


    <EditText
        android:id="@+id/et_patronymic_name"
        style="@style/EditText_rounded"
        android:layout_width="0dp"
        android:layout_marginTop="16dp"
        android:hint="@string/utog_patronymic"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_name" />

    <TextView
        android:id="@+id/textView5"
        style="@style/CompensationStepDescription_Text"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/compensation_step_fullname"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_patronymic_name" />

</android.support.constraint.ConstraintLayout>