<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.getbewarned.connectinterpreter.ui.ConfirmationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/confirmation_title"
            android:textColor="@color/colorPrimary"
            android:textSize="22sp" />


        <EditText
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:id="@+id/code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="1234"
            android:gravity="center"
            android:textSize="24sp"
            android:maxLength="4"
            android:inputType="number"
            android:maxLines="1"
            android:singleLine="true" />


        <TextView
            android:id="@+id/confirmation_description"
            android:layout_width="match_parent"
            tools:text="@string/confirmation_desc"
            android:textColor="@android:color/black"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:textSize="12sp"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:text="@string/confirmation_wait"
            android:textColor="@android:color/black"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:textSize="12sp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/action_login"
            android:textStyle="bold"
            style="@style/AppTheme.BlueButton.Borderless"
            android:theme="@style/AppTheme.BlueButton.Borderless" />

        <TextView
            android:id="@+id/wrong_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@android:color/darker_gray"
            android:text="@string/wrong_number" />
    </LinearLayout>
</ScrollView>
